--- a/src/content/docs/404.md
+++ b/src/content/docs/404.md
@@ -6,7 +6,7 @@ hero:
   title: Lost in the Docs?
   tagline: Double-check the URL, use the search feature, or navigate using the menu above.
   image:
-    file: "../../assets/without-text.svg"
+    file: "../../assets/logo.png"
 ---
 
 It looks like you've stumbled upon a broken link. **This is your chance to shine!**
@@ -14,5 +14,5 @@ Help us improve by fixing the link directly.
 
 <br />
 
-Just submit a Pull Request on our [GitHub repository](https://github.com/balfolk-wiki.trueforge.org/truecharts/tree/master/website).
+Just submit a Pull Request on our [GitHub repository](https://github.com/trueforge-org/balfolk-wiki/tree/main).
 Your contributions make our documentation better for everyone!
